# 3DGL

./: .gitignore  CMakeLists.txt  README.md  shell.nix
assets/: bunny.mesh
examples/: CMakeLists.txt
examples/bunny/: CMakeLists.txt
examples/bunny/src/: bunny.cpp
examples/cube/: CMakeLists.txt
examples/cube/src/: cube.cpp
examples/f22/: CMakeLists.txt
examples/f22/src/: f22.cpp
examples/web/: CMakeLists.txt
examples/web/src/: web.cpp
include/kiwigl/: kiwigl.hpp
include/kiwigl/core/: constants.hpp
include/kiwigl/geometry/: face.hpp  mesh.hpp  triangle.hpp  vector.hpp
include/kiwigl/graphics/: color.hpp  display.cuh  display.hpp  display.mm  frame_buffer.hpp
include/kiwigl/texture/: texture.hpp
public/: index.html
scripts/: ci.sh
tests/: CMakeLists.txt  test_library.cpp
